--- a/templates/histogram.html
+++ b/templates/histogram.html
@@ -165,7 +165,7 @@
                     <i class="fas fa-thermometer-half"></i>
                     <h3>21.9°C</h3>
                     <p>Current Temperature</p>
-                    <small>Current weather</small>
+                    <small>Chennai</small>
                 </div>
             </div>
 
