--- a/templates/login.html
+++ b/templates/login.html
@@ -96,7 +96,7 @@
                 errorMessage.style.color = "green";
                 errorMessage.innerText = "Login successful!";
                 // Redirect to a new page or perform any further actions here
-                window.location.href = "dashboard.html"; // Example redirection
+                window.location.href = "histogram.html"; // Example redirection
             } else {
                 errorMessage.style.color = "red";
                 errorMessage.innerText = "Invalid email or password!";
