added back button in alter

--- a/templates/Display Behavior Analysis and Alerts.html
+++ b/templates/Display Behavior Analysis and Alerts.html
@@ -234,6 +234,10 @@
                 <i data-feather="mail"></i>
                 Subscribe
             </button>
+            <button class="nav-button" id="go-back-button">
+                <i data-feather="arrow-left"></i>
+                Back
+            </button>
         </div>
 
         <div class="content-area">
@@ -341,10 +345,6 @@
                 <button class="inbox-button">Go to Inbox</button>
             </div>
         </div>
-    </div>
-    <!-- Back Button Container -->
-    <div class="back-button-container">
-        <button class="back-button" onclick="window.history.back()">Back</button>
     </div>
 
 
