Update Cost and Energy Consumption.html
Added the cost and energy trends.html

--- a/templates/Cost and Energy Consumption.html
+++ b/templates/Cost and Energy Consumption.html
@@ -78,7 +78,7 @@
     <div class="sidebar">
         <div class="sidebar-header">ADMIN</div>
         <ul>
-            <li><a href="#"><i class="fas fa-tachometer-alt"></i> Energy Consumption</a></li>
+            <li><a href="cost and energy trends.html"><i class="fas fa-tachometer-alt"></i> Energy Consumption</a></li>
             <li><a href="#"><i class="fas fa-chart-bar"></i> Charts</a></li>
             <li><a href="#"><i class="fas fa-table"></i> Tables</a></li>
             <li><a href="javascript:history.back();"><i class="fas fa-arrow-left"></i> Back</a></li> 
