small changes in ev reg

--- a/templates/histogram.html
+++ b/templates/histogram.html
@@ -131,7 +131,7 @@
     <!-- Sidebar Menu -->
     <div class="sidebar">
         <h2>Dashboard Menu</h2>
-        <a href="vehicle_Registration.html"><i class="fas fa-clipboard-list"></i> Vehicle Registration</a>
+        <a href="vehicle_registration.html"><i class="fas fa-clipboard-list"></i> Vehicle Registration</a>
         <a href="Battery Health Status Section.html"><i class="fas fa-battery-full"></i> Battery Health Status</a>
         <a href="Display Behavior Analysis and Alerts.html"><i class="fas fa-tools"></i> Maintenance Alert</a>
         <a href="Cost and Energy Consumption.html"><i class="fas fa-chart-line"></i> Cost & Energy Consumption</a>
